@@ -8,9 +8,9 @@ android {
   defaultConfig {
     applicationId 'net.sourceforge.smallbasic'
     minSdkVersion 16
-    targetSdkVersion 29
-    versionCode 39
-    versionName "0.12.17"
+    targetSdkVersion 28
+    versionCode 40
+    versionName "12.19"
     resConfigs "en"
   }
 
